--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             display: flex; align-items: center; justify-content: center;
             text-align: center; padding: 0 5%;
             background: linear-gradient(rgba(15, 23, 42, 0.75), rgba(15, 23, 42, 0.95)), 
-                        url('https://pixabay.com/photos/rpg-game-play-miniatures-fun-468920/');
+                        url('https://unsplash.com/pt-br/fotografias/um-close-up-de-uma-estatueta-de-dragao-em-um-jogo-de-tabuleiro-UDGIP29omBM');
             background-size: cover; 
             background-position: center;
             background-repeat: no-repeat;
